syntax = "proto3";

option go_package = "github.com/sssergei/BaseService/tree/main/proto";

package proto;

service GoReleaseService {
    rpc GetReleaseInfo(GetReleaseInfoRequest) returns (ReleaseInfo) {}
    rpc ListReleases(ListReleasesRequest) returns (ListReleasesResponse) {}

    rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}

    rpc InsertUser(InsertUserRquest) returns (InsertUserResponse) {}
}

message GetReleaseInfoRequest {
    string version = 1;
}

message ListReleasesRequest {} //empty

message SayHelloRequest {
    string name = 1;
}

message ListReleasesResponse {
    repeated ReleaseInfo releases = 1;
}

message ReleaseInfo {
    string version = 1;
    string release_date = 2;
    string release_notes_url = 3;
}

message SayHelloResponse {
    string message = 1;
}

message InsertUserRquest {
    string name = 1;
    string surname = 2;
    string othername = 3;
}

message InsertUserResponse{
    string id = 1;
}